--- a/html/greetings.html
+++ b/html/greetings.html
@@ -32,9 +32,10 @@
       <span></span>
       <span></span>
     </div>
-    <div id="weather"></div>
-    <span></span>
-    <span></span>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="/Users/kyoorim/Desktop/nomadCoders/vanillaJS/chromeWeb/js/greetings.js"></script>
     <script src="/Users/kyoorim/Desktop/nomadCoders/vanillaJS/chromeWeb/js/clock.js"></script>
     <script src="/Users/kyoorim/Desktop/nomadCoders/vanillaJS/chromeWeb/js/quotes.js"></script>
